devrooms: add Microkernels devroom CFP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -67,6 +67,8 @@ days:
         deadline: 2014-12-01
     'LLVM toolchain':
     'Microkernel-based operating systems':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002061.html
+        deadline: 2014-11-28
     'Mozilla':
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002046.html
         deadline: 2014-12-01
