--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -15,6 +15,8 @@ days:
 
   saturday:
     'Ada':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002063.html
+        deadline: 2014-11-30
     'BSD':
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002038.html
         deadline: 2014-12-01
