devrooms: add Graphics devroom CFP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -9,6 +9,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002045.html
         deadline: 2014-12-01
     'Graphics':
+        ann: http://lists.x.org/archives/xorg-devel/2014-October/044133.html
+        deadline: 2014-12-24
     'Java':
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002050.html
         deadline: 2014-12-01
