devrooms: add MySQL call for participation

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -83,6 +83,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002046.html
         deadline: 2014-12-01
     'MySQL and friends':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002064.html
+        deadline: 2014-12-07
     'Open source design':
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002031.html
         deadline: 2014-12-01
