devroms: add Lisp developer room CFP

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -35,6 +35,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002036.html
         deadline: 2014-11-17
     'Lisp':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002072.html
+        deadline: 2014-12-14
     'Open media':
         ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002041.html
         deadline: 2014-12-01
