--- a/config.yaml
+++ b/config.yaml
@@ -170,11 +170,11 @@ pentabarf:
     height: 200
 
 keysigning:
-  submission_deadline: 2015-01-26
+  submission_deadline: 2015-01-25
   homework_due: 2015-06-07
-  submission_start: 2014-12-06
+  submission_start: 2014-11-24
   # Change these when the submission window opens/closes.
-  submission_notyet: true
+  submission_notyet: false
   submission_closed: false
   # Change this when the list of keys is published.
   list_published: false
