--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -26,5 +26,6 @@ footer:
     - /practical/accommodation
   - Media and press:
     - /interviews
+    - /support/promote
     - Videos: 'http://video.fosdem.org/'
 
