sightseeing: spellcheck, link, announce

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -24,6 +24,7 @@ footer:
   - Practical information:
     - /practical/transportation
     - /practical/accommodation
+    - /practical/sightseeing
   - Media and press:
     - /interviews
     - /support/promote
