--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -22,6 +22,7 @@ footer:
     - /certification
     - /keysigning
   - Practical information:
+    - /stands
     - /practical/transportation
     - /practical/accommodation
     - /practical/sightseeing
