--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -24,6 +24,7 @@ footer:
   - Practical information:
     - /stands
     - /practical/transportation
+    - /practical/accessibility
     - /practical/accommodation
     - /practical/sightseeing
   - Media and press:
