navigation: arrange things a bit more logically
Rename "schedule" to "this year" so all the activities for this
year fit under it.  Sightseeing is hardly practical information,
so move it to "this year".

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -17,18 +17,17 @@ footer:
     - /about/sponsors
     - /support/donate
     - Archives: /archives
-  - Schedule:
-    - Information: /schedule
+  - This year:
+    - /schedule
+    - /stands
     - /certification
     - /keysigning
+    - /sightseeing
   - Practical information:
-    - /stands
-    - /practical/transportation
+    - Getting there: /practical/transportation
     - /practical/accessibility
     - /practical/accommodation
-    - /practical/sightseeing
   - Media and press:
     - /interviews
     - /support/promote
-    - Videos: 'http://video.fosdem.org/'
-
+    - Video recordings: 'http://video.fosdem.org/'
