beer: resurrect last year's information about beer

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -22,6 +22,7 @@ footer:
     - /stands
     - /certification
     - /keysigning
+    - /beerevent
     - /sightseeing
   - Practical information:
     - Getting there: /practical/transportation
