--- a/config.yaml
+++ b/config.yaml
@@ -175,9 +175,9 @@ keysigning:
   submission_start: 2014-11-24
   # Change these when the submission window opens/closes.
   submission_notyet: false
-  submission_closed: false
+  submission_closed: true
   # Change this when the list of keys is published.
-  list_published: false
+  list_published: true
   # Change this when the hashes of the keylist have been published.
   hashes_published: false
 
