--- a/config.yaml
+++ b/config.yaml
@@ -138,7 +138,7 @@ watcher:
 deploy:
   public:
     kind: rsync
-    dst:  "www-data@apeiron.fosdem.org:/var/www/fosdem.org/public/2015"
+    dst:  "www-public@www-public.fosdem.org:/www/fosdem.org/public/2016"
     options: [ '-avzP', '--delete-after' ]
   default:
     kind: rsync
@@ -146,7 +146,7 @@ deploy:
     options: [ '-avzP', '--delete-after' ]
 
 pentabarf:
-  conference_id: FOSDEM15
+  conference_id: FOSDEM16
   username: nanoc
   #password: 
   database: pentabarf
