--- a/config.yaml
+++ b/config.yaml
@@ -150,7 +150,7 @@ pentabarf:
   username: nanoc
   #password: 
   database: pentabarf
-  host:     apeiron.fosdem.org
+  host:     phronesis.fosdem.org
   port:     5432
   schema:   public
   meta_export_file: export/pentabarf.yaml
