--- a/config.yaml
+++ b/config.yaml
@@ -172,12 +172,11 @@ pentabarf:
 keysigning:
   submission_deadline: 2016-01-24
   homework_due: 2016-06-06
-  submission_start: 2014-11-24
   # Change these when the submission window opens/closes.
   submission_notyet: true
-  submission_closed: true
+  submission_closed: false
   # Change this when the list of keys is published.
-  list_published: true
+  list_published: false
 
 deadlines:
   lightningtalks:
