--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -3,110 +3,46 @@ kind: internal
 days:
   both:
     'Distributions':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002047.html
-        deadline: 2014-12-07
     'Embedded':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002045.html
-        deadline: 2014-12-01
-    'Graphics':
-        ann: http://lists.x.org/archives/xorg-devel/2014-October/044133.html
-        deadline: 2014-12-24
-    'Java':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002050.html
-        deadline: 2014-12-07
+    'Free Java':
+    'Legal and Policy issues':
+    'Programmable Infrastructure':
 
   saturday:
     'Ada':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002063.html
-        deadline: 2014-12-14
-    'BSD':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002038.html
-        deadline: 2014-12-14
-    'Configuration management':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002029.html
-        deadline: 2014-12-10
-    'Graph processing':
-        ann: http://www.graphdevroom.org/#CfP
-        deadline: 2014-12-14
-    'Infrastructure as a service':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002055.html
-        deadline: 2014-12-01
-    'Legal and policy issues':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002036.html
-        deadline: 2014-11-17
-    'Lisp':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002072.html
-        deadline: 2014-12-14
-    'Open media':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002041.html
-        deadline: 2014-12-01
-    'Network management and SDN':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002060.html
-        deadline: 2014-12-10
-    'Open Document editors':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002066.html
-        deadline: 2014-12-14
-    'Open source search':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002040.html
-        deadline: 2014-12-09
-    'PostgreSQL':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002058.html
-        deadline: 2014-11-24
+    'Containers and Process Isolation':
+    'EDA':
+    'GNU Guile':
+    'Graph Processing':
+    'IoT':
+    'Lua':
+    'Microkernels':
+    'Mozilla':
+    'MySQL and Friends':
+    'Open Document Editors':
+    'Open Media':
+    'Open Source Design':
     'Python':
-        ann: http://python-fosdem.org/
-        deadline: 2014-12-01
-    'Perl':
-    'Ruby':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002054.html
-        deadline: 2014-12-12
-    'Valgrind':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002065.html
-        deadline: 2014-12-01
+    'Real Time':
+    'Security':
+    'Testing and Automation':
 
   sunday:
+    'BSD':
+    'Coding for Language Communities':
+    'Config Management':
     'Desktops':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002057.html
-        deadline: 2014-12-07
-    'Electronic design automation':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002030.html
-        deadline: 2014-12-01
     'Geospatial':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002039.html
-        deadline: 2014-12-01
     'Go':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002059.html
-        deadline: 2014-12-01
-    'Internet of things':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002044.html
-        deadline: 2014-12-01
-    'LLVM toolchain':
-        ann: http://lists.cs.uiuc.edu/pipermail/llvmdev/2014-October/077976.html
-        deadline: 2014-12-01
-    'Microkernel-based operating systems':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002061.html
-        deadline: 2014-11-28
-    'Mozilla':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002046.html
-        deadline: 2014-12-01
-    'MySQL and friends':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-November/002064.html
-        deadline: 2014-12-07
-    'Open source design':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002031.html
-        deadline: 2014-12-08
-    'PHP and friends':
-    'Security':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002049.html
-        deadline: 2014-12-07
-    'Software-defined radio':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002043.html
-        deadline: 2014-12-01
-    'Smalltalk':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002035.html
-        deadline: 2014-12-01
-    'Testing and automation':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002053.html
-        deadline: 2014-12-01
-    'Virtualisation':
-        ann: https://lists.fosdem.org/pipermail/fosdem/2014-October/002056.html
-        deadline: 2014-12-01
+    'Graphics':
+    'HPC, Big Data and Data Science':
+    'LLVM Toolchain':
+    'Open Game Development':
+    'PHP and Friends':
+    'Perl':
+        ann: https://wendyga.wordpress.com/2015/10/08/fosdem-30-31-january-2016-brussels-belgium-call-for-speakers/
+    'PostgreSQL':
+    'Ruby':
+    'SDN and NFV':
+    'Software Defined Radio':
+
