devrooms: Add Open Media

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -26,6 +26,8 @@ days:
         ann: http://www.mysqlandfriends.eu/post/fosdem-mysql-friends-devroom-cfp-is-open/
     'Open Document Editors':
     'Open Media':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2015-October/002193.html
+        deadline: 2015-12-01
     'Open Source Design':
     'Python':
     'Real Time':
