devrooms: Rename Prog Infra to Virt & IaaS

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -6,7 +6,7 @@ days:
     'Embedded':
     'Free Java':
     'Legal and Policy issues':
-    'Programmable Infrastructure':
+    'Virtualisation and IaaS':
 
   saturday:
     'Ada':
