devrooms: add CfP for BSD and Open Source Design

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -29,6 +29,8 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2015-October/002193.html
         deadline: 2015-12-01
     'Open Source Design':
+        ann: http://opensourcedesign.net/events/design/hack/meeting/2016/01/30/opensourcedesign-fosdem.html
+        deadline: 2015-12-01
     'Python':
     'Real Time':
     'Security':
@@ -36,6 +38,8 @@ days:
 
   sunday:
     'BSD':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2015-October/002189.html
+        deadline: 2015-12-10
     'Coding for Language Communities':
     'Config Management':
     'Desktops':
