--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -17,6 +17,8 @@ days:
   saturday:
     'Ada':
     'Containers and Process Isolation':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2015-November/002294.html
+        deadline: 2015-12-01
     'EDA':
         ann: http://www.ohwr.org/projects/ohr-meta/wiki/FOSDEM2016
         deadline: 2015-12-04
@@ -62,11 +64,15 @@ days:
         ann: https://lists.fosdem.org/pipermail/fosdem/2015-October/002189.html
         deadline: 2015-12-10
     'Coding for Language Communities':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2015-November/002295.html
+        deadline: 2015-12-11
     'Config Management':
         ann: https://lists.fosdem.org/pipermail/fosdem/2015-October/002201.html
         deadline: 2015-12-01
     'Desktops':
     'Geospatial':
+        ann: https://lists.fosdem.org/pipermail/fosdem/2015-November/thread.html
+        deadline: 2015-12-01
     'Go':
         ann: https://forum.golangbridge.org/t/fosdem-2016-call-for-proposals/1358/1
         deadline: 2015-12-05
