Add FOSDEM Code of Conduct (to section: practical information)

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -25,6 +25,7 @@ footer:
     - Getting there: /practical/transportation
     - /practical/accessibility
     - /practical/accommodation
+    - /practical/conduct
   - Media and press:
     - /interviews
     - Video recordings: 'http://video.fosdem.org/'
