devrooms: Extend title of Embedded

--- a/content/devrooms-cfp.yaml
+++ b/content/devrooms-cfp.yaml
@@ -5,7 +5,7 @@ days:
     'Distributions':
         ann: https://lists.fosdem.org/pipermail/fosdem/2015-November/002297.html
         deadline: 2015-12-10
-    'Embedded':
+    'Embedded, Mobile and Automotive':
         ann: https://lists.fosdem.org/pipermail/fosdem/2015-October/002283.html
         deadline: 2015-12-07
     'Free Java':
