fringe: Add FOSDEM Fringe.

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -21,6 +21,7 @@ footer:
     - /schedule
     - /certification
     - /keysigning
+    - /fringe
   - Practical information:
     - Getting there: /practical/transportation
     - /practical/accessibility
