--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -65,6 +65,14 @@ events:
         registration: In advance (waiting list)
         website: http://cfgmgmtcamp.eu/
         contact: info@cfgmgmtcamp.eu
+    'Jenkins 2.0 Contributor Summit':
+        location: Brussels
+        start: 2016-02-01
+        end: 2016-02-01
+        cost: Free
+        registration: By Jan 29
+        website: http://www.meetup.com/jenkinsmeetup/events/227463345/
+        contact: fosdem@lists.jenkins-ci.org
     'Juju Charmer Summit':
         location: Ghent, Belgium
         start: 2016-02-01
@@ -81,6 +89,22 @@ events:
         registration: By 2016-01-17
         website: https://www.eventbrite.com/e/foreman-construction-day-registration-19911909056
         contact: greg.sutcliffe@gmail.com
+    'Puppet Contributor Summit':
+        location: Ghent, Belgium
+        start: 2016-02-03
+        end: 2016-02-03
+        cost: Free
+        registration: None
+        website: http://puppet-contributor-summit-ghent-2016.eventbrite.com/
+        contact: kara@puppetlabs.com
+   'Puppet Camp Amsterdam':
+        location: Amsterdam, Netherlands
+        start: 2016-02-05
+        end: 2016-02-05
+        cost: $100
+        registration: Required
+        website: http://puppetcampamsterdam2016.eventbrite.com/
+        contact: kara@puppetlabs.com
     'DevConf.cz':
         location: Brno, Czech Republic
         start: 2016-02-05
