promote: update content for 2016

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -29,4 +29,5 @@ footer:
     - /practical/conduct
   - Media and press:
     - /interviews
+    - /support/promote
     - Video recordings: 'http://video.fosdem.org/'
