faq: Re-add the FAQ, exact copy of most recent archived version (2013)

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -16,6 +16,7 @@ footer:
     - About: /about
     - /about/sponsors
     - /support/donate
+    - /faq
     - Archives: /archives
   - This year:
     - /schedule
