--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -22,6 +22,7 @@ footer:
     - /schedule
     - /certification
     - /keysigning
+    - /sightseeing
     - /fringe
   - Practical information:
     - Getting there: /practical/transportation
