--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -65,6 +65,14 @@ events:
         registration: In advance (advised)
         website: https://www.rdoproject.org/blog/2015/11/rdo-community-day-fosdem/
         contact: rbowen@redhat.com
+    'Richard Stallman - Free/Libre/Vrije Software: The Goal and the Path':
+        location: Brussels - D0.03, Campus Etterbeek, VUB, Pleinlaan 2
+        start: 2016-01-29 19:30
+        end: 2016-01-29
+        cost: Free
+        registration: None
+        website: http://www.vub.ac.be/image/3brussel_large.jpg
+        contact: kevin@vanbockryck.eu
     'MINIXCon 2016':
         location: Amsterdam
         start: 2016-02-01
