updating beerevent page

--- a/content/navigation.yaml
+++ b/content/navigation.yaml
@@ -23,6 +23,7 @@ footer:
     - /stands
     - /certification
     - /keysigning
+    - /beerevent
     - /sightseeing
     - /fringe
   - Practical information:
