--- a/config.yaml
+++ b/config.yaml
@@ -136,6 +136,10 @@ watcher:
   notify_on_compilation_failure: true
 
 deploy:
+  archive:
+    kind: rsync
+    dst:  "www-archive@www-public.fosdem.org:/www/archive.fosdem.org"
+    options: [ '-glPrtvzPO', '--exclude=searcher', '--exclude=404.html', '--exclude=favicon.ico' ]
   public:
     kind: rsync
     dst:  "www-public@www-public.fosdem.org:/www/fosdem.org/public/2016"
