--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -1,3 +1,13 @@
 ---
 kind: internal
 events:
+     '':
+        location: 
+        start: 
+        end: 
+        cost: 
+        registration: 
+        website: 
+        contact: 
+
+
