--- a/config.yaml
+++ b/config.yaml
@@ -173,10 +173,10 @@ keysigning:
   submission_deadline: 2017-01-24
   homework_due: 2017-04-30
   # Change these when the submission window opens/closes.
-  submission_notyet: false
-  submission_closed: true
+  submission_notyet: true
+  submission_closed: false
   # Change this when the list of keys is published.
-  list_published: true
+  list_published: false
 
 deadlines:
   lightningtalks:
